fix problm fix problem structure

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kadoxa</title>
   </head>
-  <body></body>
+  <body
+    style="
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    "
+  >
+    <h1 style="text-align: center">
+      <a href="/details-product.html"> Go to details product </a>
+    </h1>
+  </body>
 </html>
