--- a/details-product.html
+++ b/details-product.html
@@ -36,21 +36,29 @@
         <!-- Start heading section -->
         <section class="details-product__heading">
           <!-- Start heading/slide -->
-          <div>
+          <div class="details-product__heading_slider">
             <div class="slider">
               <aside>
                 <span></span>
 
                 <div>
-                  <img src="https://picsum.photos/100/100" />
-                  <img src="https://picsum.photos/101/101" />
-                  <img src="https://picsum.photos/102/102" />
+                  <img
+                    src="https://images.unsplash.com/photo-1542744094-3a31f272c490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                  />
+                  <img
+                    src="https://images.unsplash.com/photo-1542744094-3a31f272c490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                  />
+                  <img
+                    src="https://images.unsplash.com/photo-1542744094-3a31f272c490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                  />
                 </div>
 
                 <span></span>
               </aside>
 
-              <img src="https://picsum.photos/540/540" />
+              <img
+                src="https://images.unsplash.com/photo-1542744094-3a31f272c490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+              />
             </div>
           </div>
           <!-- End heading/slide -->
